--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="stylesheet/style.css">
 
     <!-- Libraries -->
-    <script src="lib/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 
     <!-- Main sketch file -->
     <script src="scripts/sketch.js"></script>
