modifications for upload

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 
     <!-- Main sketch file -->
-    <script src="scripts/sketch.js"></script>
+    <script src="sketch.js"></script>
 
     <script src="scripts/gallery.js"></script>
     <script src="scripts/helpers/save-visual.js"></script>
@@ -62,7 +62,7 @@
         <!-- A div is created to contain both the user guide and image download buttons -->
         <div id="buttons-area">
           <!-- add a button that links to the user guide -->
-          <button onclick="location.href='documentation/user-guide.html'" type="button">User Guide</button>
+          <!-- <button onclick="location.href='documentation/user-guide.html'" type="button">User Guide</button> -->
         </div>
       </div>
     </div>
