--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 
     <!-- Main sketch file -->
-    <script src="sketch.js"></script>
+    <script src="scripts/main-sketch.js"></script>
 
     <script src="scripts/gallery.js"></script>
     <script src="scripts/helpers/save-visual.js"></script>
