--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Data Visualiser: CM1010 Final Assignment</title>
 
     <link rel="stylesheet" href="stylesheet/style.css">
@@ -13,43 +14,43 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
 
     <!-- Main sketch file -->
-    <script src="scripts/main-sketch.js"></script>
+    <script src="scripts/v1.0.0/main-sketch.js"></script>
 
-    <script src="scripts/gallery.js"></script>
-    <script src="scripts/helpers/save-visual.js"></script>
+    <script src="scripts/v1.0.0/gallery.js"></script>
+    <script src="scripts/v1.0.0/helpers/save-visual.js"></script>
 
     <!-- Add helpers below -->
-    <script src="scripts/helpers/add-title.js"></script>
-    <script src="scripts/helpers/string-to-numbers.js"></script>
-    <script src="scripts/helpers/number-to-commas.js"></script>
+    <script src="scripts/v1.0.0/helpers/add-title.js"></script>
+    <script src="scripts/v1.0.0/helpers/string-to-numbers.js"></script>
+    <script src="scripts/v1.0.0/helpers/number-to-commas.js"></script>
 
-    <script src="scripts/helpers/check-mouse-hover.js"></script>
-    <script src="scripts/helpers/draw-linepoints.js"></script>
+    <script src="scripts/v1.0.0/helpers/check-mouse-hover.js"></script>
+    <script src="scripts/v1.0.0/helpers/draw-linepoints.js"></script>
 
-    <script src="scripts/helpers/sum.js"></script>
-    <script src="scripts/helpers/toggle-grid.js"></script>
-    <script src="scripts/helpers/draw-axis.js"></script>
-    <script src="scripts/helpers/draw-box-axis.js"></script>
-    <script src="scripts/helpers/draw-axislabels.js"></script>
-    <script src="scripts/helpers/draw-xaxis-ticklabels.js"></script>
-    <script src="scripts/helpers/draw-yaxis-ticklabels.js"></script>
+    <script src="scripts/v1.0.0/helpers/sum.js"></script>
+    <script src="scripts/v1.0.0/helpers/toggle-grid.js"></script>
+    <script src="scripts/v1.0.0/helpers/draw-axis.js"></script>
+    <script src="scripts/v1.0.0/helpers/draw-box-axis.js"></script>
+    <script src="scripts/v1.0.0/helpers/draw-axislabels.js"></script>
+    <script src="scripts/v1.0.0/helpers/draw-xaxis-ticklabels.js"></script>
+    <script src="scripts/v1.0.0/helpers/draw-yaxis-ticklabels.js"></script>
 
     <!-- chart template files -->
-    <script src="scripts/chart-templates/donut-chart.js"></script>
-    <script src="scripts/chart-templates/stackedbar-chart.js"></script>
-    <script src="scripts/chart-templates/map-bubble-chart.js"></script>
-    <script src="scripts/chart-templates/multiclass-timeseries-chart.js"></script>
-    <script src="scripts/chart-templates/bubble-chart.js"></script>
-    <script src="scripts/chart-templates/timeseries-chart.js"></script>
+    <script src="scripts/v1.0.0/chart-templates/donut-chart.js"></script>
+    <script src="scripts/v1.0.0/chart-templates/stackedbar-chart.js"></script>
+    <script src="scripts/v1.0.0/chart-templates/map-bubble-chart.js"></script>
+    <script src="scripts/v1.0.0/chart-templates/multiclass-timeseries-chart.js"></script>
+    <script src="scripts/v1.0.0/chart-templates/bubble-chart.js"></script>
+    <script src="scripts/v1.0.0/chart-templates/timeseries-chart.js"></script>
 
     <!-- Visualisation files -->
-    <script src="scripts/visualisations/tech-diversity-race.js"></script>
-    <script src="scripts/visualisations/tech-diversity-gender.js"></script>
-    <script src="scripts/visualisations/covid19-cases-geography.js"></script>
-    <script src="scripts/visualisations/covid19-cases-weekly.js"></script>
-    <script src="scripts/visualisations/pay-gap-by-job-2017.js"></script>
-    <script src="scripts/visualisations/pay-gap-time-series.js"></script>
-    <script src="scripts/visualisations/climate-change.js"></script>
+    <script src="scripts/v1.0.0/visualisations/tech-diversity-race.js"></script>
+    <script src="scripts/v1.0.0/visualisations/tech-diversity-gender.js"></script>
+    <script src="scripts/v1.0.0/visualisations/covid19-cases-geography.js"></script>
+    <script src="scripts/v1.0.0/visualisations/covid19-cases-weekly.js"></script>
+    <script src="scripts/v1.0.0/visualisations/pay-gap-by-job-2017.js"></script>
+    <script src="scripts/v1.0.0/visualisations/pay-gap-time-series.js"></script>
+    <script src="scripts/v1.0.0/visualisations/climate-change.js"></script>
 
   </head>
 
