--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Data Visualiser: CM1010 Final Assignment</title>
 
-    <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="stylesheet" href="stylesheet/v1.0.0/style.css">
 
     <!-- Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js"></script>
@@ -48,8 +48,8 @@
     <script src="scripts/v1.0.0/visualisations/tech-diversity-gender.js"></script>
     <script src="scripts/v1.0.0/visualisations/covid19-cases-geography.js"></script>
     <script src="scripts/v1.0.0/visualisations/covid19-cases-weekly.js"></script>
+    <script src="scripts/v1.0.0/visualisations/travel-search-term.js"></script>
     <script src="scripts/v1.0.0/visualisations/pay-gap-by-job-2017.js"></script>
-    <script src="scripts/v1.0.0/visualisations/pay-gap-time-series.js"></script>
     <script src="scripts/v1.0.0/visualisations/climate-change.js"></script>
 
   </head>
