add death rate of infection analysis

--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
     <script src="scripts/v1.0.0/chart-templates/timeseries-chart.js"></script>
 
     <!-- Visualisation files -->
-    <script src="scripts/v1.0.0/visualisations/tech-diversity-race.js"></script>
-    <script src="scripts/v1.0.0/visualisations/tech-diversity-gender.js"></script>
+    <script src="scripts/v1.0.0/visualisations/death-rate-of-infections.js"></script>
     <script src="scripts/v1.0.0/visualisations/covid19-cases-geography.js"></script>
     <script src="scripts/v1.0.0/visualisations/covid19-cases-weekly.js"></script>
     <script src="scripts/v1.0.0/visualisations/travel-search-term.js"></script>
-    <script src="scripts/v1.0.0/visualisations/pay-gap-by-job-2017.js"></script>
-    <script src="scripts/v1.0.0/visualisations/climate-change.js"></script>
+    <!-- <script src="scripts/v1.0.0/visualisations/pay-gap-by-job-2017.js"></script>
+    <script src="scripts/v1.0.0/visualisations/tech-diversity-gender.js"></script> -->
 
   </head>
 
